--- a/Working with ExpressJs/package.json
+++ b/Working with ExpressJs/package.json
@@ -2,7 +2,6 @@
   "name": "workingwithexpressjs",
   "version": "1.0.0",
   "main": "app.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
@@ -11,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "body-parser": "^1.20.3",
     "express": "^4.21.2",
     "nodemon": "^3.1.9"
   }
