--- a/Working with ExpressJs/package.json
+++ b/Working with ExpressJs/package.json
@@ -11,7 +11,10 @@
   "description": "",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "ejs": "^3.1.10",
     "express": "^4.21.2",
-    "nodemon": "^3.1.9"
+    "express-handlebars": "^8.0.1",
+    "nodemon": "^3.1.9",
+    "pug": "^3.0.3"
   }
 }
