--- a/Working with NoSQL & using mongoDB/package.json
+++ b/Working with NoSQL & using mongoDB/package.json
@@ -11,9 +11,11 @@
   "description": "",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-handlebars": "3.0",
+    "mongodb": "^6.13.1",
     "nodemon": "^3.1.9",
     "pug": "^3.0.3"
   }
