--- a/Working with mongoose/package.json
+++ b/Working with mongoose/package.json
@@ -16,6 +16,7 @@
     "express": "^4.21.2",
     "express-handlebars": "3.0",
     "mongodb": "^6.13.1",
+    "mongoose": "^8.10.1",
     "nodemon": "^3.1.9",
     "pug": "^3.0.3"
   }
