--- a/File upload & Download/package.json
+++ b/File upload & Download/package.json
@@ -19,6 +19,7 @@
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^2.0.3",
     "csurf": "^1.9.0",
+    "dotenv": "^16.4.7",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
@@ -29,8 +30,8 @@
     "multer": "^1.4.0",
     "mysql2": "^1.6.1",
     "nodemailer": "^4.6.8",
-    "dotenv": "^16.4.7",
     "nodemailer-sendgrid-transport": "^0.2.0",
+    "pdfkit": "^0.16.0",
     "pug": "^2.0.3",
     "sequelize": "^5.0.0-beta.11"
   }
