--- a/Payment/package.json
+++ b/Payment/package.json
@@ -26,7 +26,7 @@
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "express-validator": "^5.3.0",
-    "mongodb": "^4.17.1",
+    "mongodb": "^5.9.2",
     "mongoose": "^8.12.1",
     "multer": "^1.4.0",
     "mysql2": "^1.6.1",
@@ -34,6 +34,7 @@
     "nodemailer-sendgrid-transport": "^0.2.0",
     "pdfkit": "^0.16.0",
     "pug": "^2.0.3",
-    "sequelize": "^5.0.0-beta.11"
+    "sequelize": "^5.0.0-beta.11",
+    "stripe": "^17.7.0"
   }
 }
